Fixed align in FF and Chrome

--- a/src/tinytoggle/css/tiny-toggle.css
+++ b/src/tinytoggle/css/tiny-toggle.css
@@ -63,7 +63,14 @@
 
 .tt {
 	display: inline-block;
+  vertical-align: middle;
 	/*line-height: 1em;*/
+}
+/* FF only */
+@media screen and (min--moz-device-pixel-ratio:0) {
+  .tt {
+    vertical-align: baseline;
+  }
 }
 
 .tt-icon {
